--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
           <li class="navbar-item">
             <a href="#" class="navbar-link" data-nav-link>contact</a>
           </li>
-
+          <li class="navbar-item LogPc">
+            <a href="login.html" class="navbar-link" data-nav-link>login</a>
+          </li>
         </ul>
       </nav>
 
